sprin-music-k8s-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-music-cephfs
  name: spring-music-cephfs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-music-cephfs
  template:
    metadata:
      labels:
        app: spring-music-cephfs
    spec:
      containers:
      - image: registry.pcld.busanbank.co.kr:5000/sample/spring-music:cephfs-1.0
        name: spring-music-cephfs
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: pvc
            mountPath: "/app/volumes"
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: app-cephfs-claim
