sprin-music-k8s-test/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-music
  name: spring-music
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-music
  type: ClusterIP
